# djinni-be-test-task

./: Makefile  README.md  m  pyproject.toml
wishlist/: core.py  settings.py  urls.py
wishlist/main/: apps.py  models.py  urls.py  validation.py  views.py
wishlist/main/fixtures/: item.json
wishlist/main/migrations/: 0001_initial.py  0002_alter_wishitem_item_itemwishlist.py  0002_alter_wishitem_item_wishlist.py  0002_wishcategory_alter_wishitem_item_wishitem_category.py  0003_remove_wishitem_category_wishitem_name_and_more.py  0004_alter_wishitem_item.py  0005_alter_wishitem_name.py
wishlist/templates/: index.html
wishlist/templates/macro/: card.html  wishlist_form.html
